[metadata]
name = pyexch
version = 2.0.0
author = Andylytical
author_email = aloftus@gmail.com
description = Wrapper around exchangelib
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/andylytical/pyexch
project_urls =
  Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: BSD 3-Clause License
  Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
